--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "chalk": "^4.1.2",
-    "debug": "^4.3.4",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0"
-  }
+    "name": "node",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "set DEBUG = * & node app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "chalk": "^4.1.2",
+        "debug": "^4.3.4",
+        "express": "^4.18.2",
+        "morgan": "^1.10.0"
+    }
 }
